# realplan-ai

./: .gitignore  AGENTS.md  README.md  classifier.py  main.py  pyproject.toml  realplan_estimate_and_update_simulation.py  requirements-dev.txt
app/: main.py
app/api/: exceptions.py  response.py
app/api/routes/: __init__.py  schedules.py  sessions.py  tasks.py  users.py
app/api/v1/: __init__.py  classify.py  predict.py  recommend.py  schedules.py  session.py  sessions.py  tasks.py  update.py  users.py
app/core/: config.py
app/schemas/: auto_placement.py  classify.py  common.py  decomposition.py  estimate.py  predict.py  recommend.py  schedules.py  session.py  tasks.py  update.py
app/services/: auto_placement.py  focus_matching.py  predictor.py  scheduler.py  session_estimator.py  task_decomposition.py  updater.py
data/dummy-data-demo/: sejin_demo_sessions_for_30_completed_tasks.csv
data/realplan-demo/: 나영_sessions.csv  나영_tasks.csv  세진_sessions.csv  세진_tasks.csv
docs/: AI_DB_SCHEMA.md  API_SPEC.md  CODE_ANALYSIS_GUIDE.md  CODE_GUIDE.md
realplan_simulation_output/: prediction_timeline_results.csv  profile_history_results.csv  session_remaining_results.csv  task_estimate_and_update_results.csv
tests/: conftest.py  test_api.py  test_classifier.py  test_predictor.py  test_routes.py  test_scheduler.py
tests/services/: test_auto_placement.py  test_classifier.py  test_early_stage.py  test_initial_estimator.py  test_real_data_estimation.py  test_real_data_prediction.py  test_scheduler.py  test_session_estimator.py  test_task_decomposition.py
(+220 files in other folders)
