[project]
name = "ai"
version = "0.1.0"
description = "RealPlan AI Service — 계획 오류 보정 기반 학습 플래너"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "openai>=2.33.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]
